# Simulation

./: .gitignore  README.md  traciktest.py
grasp_point/scripts/: commit_solution.py  kdl_conversions.py  robot_control.py  test_grasp.py
object_in_hand/: CMakeLists.txt  package.xml
object_in_hand/scripts/: Read_Data.py  easy_get_picture.py  getobj_from_realsense.py  pick_from_rec.py  record_data.py  robot_control.py  see_point_cloud.py  test.py  tradition_method.py
ocrtoc_solution/: CMakeLists.txt
ocrtoc_solution/launch/: commit_solution.launch
ocrtoc_solution/scripts/: Read_Data.py  check_DenseFusion.py  commit_solution.py  commit_solution_myself.py  quaternion.py  robot_control.py  temp.py  test.py  test_grasp.py
ocrtoc_task/launch/: bringup_simulator.launch  trigger_and_evaluation.launch
sapien_simulator/urdf/: ur5e.urdf
ur5_test/: CMakeLists.txt  package.xml
ur5_test/scripts/: graspingplanning.py  graspingtest.py  main.py  motionplanningtest.py  movetest.py  new_planing.py  planning.py  traciktest.py
ur5_test/src/: motiontest.py
ur_control/: CMakeLists.txt  package.xml  ur_control.launch
ur_control/config/: catch_bottle.rviz  env_param.yaml
ur_control/src/: catch_bottle.cpp  catch_bottle.h
views_densefusion/: CMakeLists.txt  DenseFusionInfer_Views.py  package.xml
views_densefusion/scripts/: DenseFusionInfer.py  Read_Data.py  realsense_DenseFusionInfer.py  robot_control.py
vision_process/: CMakeLists.txt  Readme.md  package.xml
vision_process/launch/: make_data.launch
vision_process/scripts/: ChangeALiDataset.py  DenseFusionInfer.py  (+11 more)
(+128 files in other folders)
